--- a/CSS/cate.css
+++ b/CSS/cate.css
@@ -7,6 +7,9 @@
 body {
     height: 100vh;
     font-family: 'Poppins', sans-serif;
+    /* display: flex;
+    flex-direction: column;
+    gap: 24px; */
 }
 
 .head {
@@ -161,73 +164,116 @@ body {
 .card1:hover,
 .card2:hover,
 .card3:hover,
-.card4:hover 
-.card-1:hover {
+.card4:hover .card-1:hover {
     transition: width 3s, height 3s;
     transform: scale(1.05);
 }
-.categories{
+
+.categories {
     display: grid;
-    grid-template-rows: repeat(4,1fr);
-    gap: 32px;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 48px;
 }
-#jelwery{
-     width: 100%;
+
+#jelwery,
+#toy,
+#watch,
+#useful {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
-.name{
-   
+
+.name {
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 0 28px;
 }
-.name h3{
+
+.name h3 {
     color: #C25975;
     font-size: 24px;
 }
-.name-right{
+
+.name-right {
     display: flex;
     flex-direction: row;
     gap: 12px;
-     color: #817b7b;
+    color: #817b7b;
 }
-.name-right i{
+
+.name-right i {
     padding: 1.5px;
     /* color: #817b7b; */
 }
-.pic{
+
+.pic {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.pic .card-1{
+
+.pic .card-1 {
     height: 32.8vh;
     width: 15%;
     box-shadow: #e2bebb85 0px 4px 16px;
-     overflow: hidden;
-      border-radius: 12px;
+    overflow: hidden;
+    border-radius: 12px;
 
 
 
 }
 
-.card-1{
+.item {
+    display: flex;
+    flex-direction: row;
+    gap: 36px;
+}
+
+.item p,
+.item1 p,
+.item2 p,
+.item3 p {
+    padding-top: 20px;
+}
+
+.item1 {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.item2 {
+    display: flex;
+    flex-direction: row;
+    gap: 36px;
+}
+
+.item3 {
+    display: flex;
+    flex-direction: row;
+    gap: 84px;
+}
+
+.card-1 {
     width: 500px;
     position: relative;
-    
+
 }
-.card-1 img{
+
+.card-1 img {
     width: 100%;
     display: block;
     margin: auto;
     border-radius: 12px;
 }
-.info{
+
+.info {
     width: 100%;
-    height:100%;
+    height: 100%;
     top: 0;
     left: 0;
     position: absolute;
@@ -238,36 +284,96 @@ body {
     opacity: 0;
     transition: 0.2s;
     flex-direction: column;
-   justify-content:space-between ;
+    justify-content: space-between;
 }
-.info:hover{
+
+.info:hover {
     opacity: 1;
 
 }
-.info h3{
+
+.info h3 {
     color: white;
     text-shadow: 2px 3px 2px #ba425abe;
     font-size: 24px;
     padding: 12px 0;
 }
-.info p{
+
+.info p {
     padding-left: 12px;
     color: white;
     text-align: center;
 }
-.info-1{
+
+.info-1 {
     display: flex;
     flex-direction: row;
     margin-left: 60%;
     gap: 16px;
-   
+
 }
-.info-1 i{
-    color:#ba506c ;
+
+.info-1 i {
+    color: #ba506c;
     padding: 0 0 12px 0;
     font-size: 18px;
 }
-.info-1 .fa-heart{
+
+.info-1 .fa-heart {
     color: rgba(255, 255, 255, 0.662);
     border: 1px;
+}
+
+.footer {
+    margin: 28px auto;
+    width: 100%;
+    background: #1a1a1a;
+    color: #fff;
+    padding: 40px 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+}
+
+.decript-dlk {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.descript-dlk h2 {
+    font-size: 24px;
+    letter-spacing: 2px;
+}
+
+.descript-dlk p {
+    font-size: 14px;
+    color: #ccc;
+}
+
+.nav {
+    margin-bottom: 20px;
+}
+
+.nav a {
+    color: #fff;
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+.contacts {
+    margin-bottom: 20px;
+}
+
+.contacts a {
+    color: #fff;
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+.reserve p {
+    font-size: 12px;
+    color: #777;
 }
