--- a/CSS/cate.css
+++ b/CSS/cate.css
@@ -38,6 +38,23 @@ body {
     margin-top: 14px;
 }
 
+.mix {
+    position: fixed;
+    top: 16;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+}
+
+.head img {
+    height: 50px;
+    width: 40px;
+}
+
+.head p {
+    margin-top: 14px;
+}
+
 .header {
     width: 100%;
     height: 60px;
@@ -75,7 +92,7 @@ body {
 .menu {
     flex: 0.4;
     display: flex;
-    gap: 24px;
+    gap: 32px;
     margin-right: 24px;
 }
 
@@ -90,6 +107,7 @@ body {
 
 .menu a:hover {
     color: #ba425af2;
+    
 }
 
 .main {
@@ -159,16 +177,46 @@ body {
     width: 20%;
     height: 40vh;
     border-radius: 16px;
+    text-decoration: none;
+  
 }
 
-.card1:hover,
-.card2:hover,
-.card3:hover,
-.card4:hover .card-1:hover {
-    transition: width 3s, height 3s;
-    transform: scale(1.05);
+.card1, .card2, .card3, .card4{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 80%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 10% 10%;
 }
-
+.card1 i, .card2 i, .card3 i, .card4 i{
+    background-color: #f0f0eb;
+    border-radius: 50%;
+    padding: 20px;
+    color: black;
+}
+.card1 h3, .card2 h3, .card3 h3, .card4 h3{
+    color: black;
+}
+.card1 p, .card2 p, .card3 p, .card4 p{
+    color: rgb(140, 136, 136);
+}
+.btn-gift{
+    padding: 6px 12px;
+    border: none;
+    border-radius: 12px;
+}
+.gift0, .gift2{
+    background:#f3eae6;
+}
+.gift1{
+    background: #e4e4d0;
+}
+.gift3{
+    background: #e7eee4;
+}
 .categories {
     display: grid;
     grid-template-rows: repeat(4, 1fr);
@@ -183,6 +231,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 16px;
+  
 }
 
 .name {
@@ -260,6 +309,7 @@ body {
 
 .card-1 {
     width: 500px;
+    height: 50%;
     position: relative;
 
 }
