--- a/CSS/cate.css
+++ b/CSS/cate.css
@@ -192,7 +192,7 @@ body {
     margin: 10% 10%;
 }
 .card1 i, .card2 i, .card3 i, .card4 i{
-    background-color: #f0f0eb;
+    background-color: #c49da74a;
     border-radius: 50%;
     padding: 20px;
     color: black;
