--- a/Media/media_contact.css
+++ b/Media/media_contact.css
@@ -1,1 +1,43 @@
+@media(min-width:320px) and (max-width:767px){
+    .img p{
+        display: none;
+    }
+    .menu a{
+        font-size: 14px;
+    }
+    .contact{
+        padding-top: 15%;
+    }
+    .location h3{
+        font-size: 18px;
+        margin-top: 20%;
+        width: 100%;
+        margin-left: 80%;
+    }
+    .form{
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+    .form1-1-1{
+        display: flex;
+        flex-direction: column;
+    }
+    .btn{
+        width: 40%;
+        margin-left: 30%;
+    }
+    .footer{
+        margin-top: 55em;
+    }
 
+}
+@media (min-width: 768px) and (max-width: 1024px){
+    .form{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer{
+        margin-top: 19em;
+    }
+}
