--- a/Media/media_blog.css
+++ b/Media/media_blog.css
@@ -5,6 +5,9 @@
     .main-1{
         margin-top: 18%;
     }
+    .menu a{
+        font-size: 14px;
+    }
     .main-1 p{
         display: none;
     }
