--- a/Media/media_index.css
+++ b/Media/media_index.css
@@ -28,7 +28,8 @@
     .mission_vision {
         display: flex;
         flex-direction: column;
-        gap: 12px;
+        gap: 36px;
+        margin-top: 10%;
 
     }
 
@@ -38,7 +39,7 @@
     }
 
     .footer {
-        margin-top: 16px;
+        margin-top: 12%;
     }
 }
 
@@ -65,6 +66,7 @@
         font-size: 36px;
         width: 100%;
     }
+   
     .mision, .vision{
         display: flex;
         flex-direction: column;
