--- a/CSS/cate.css
+++ b/CSS/cate.css
@@ -7,9 +7,6 @@
 body {
     height: 100vh;
     font-family: 'Poppins', sans-serif;
-    /* display: flex;
-    flex-direction: column;
-    gap: 24px; */
 }
 
 .head {
@@ -58,7 +55,7 @@ body {
 .header {
     width: 100%;
     height: 60px;
-    background: #F5F5F5;
+     background: #efefeff1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -93,7 +90,6 @@ body {
     flex: 0.4;
     display: flex;
     gap: 32px;
-    margin-right: 24px;
 }
 
 .menu a {
@@ -102,6 +98,8 @@ body {
     margin-top: 24px;
     font-size: large;
     font-weight: 600;
+    transition: 0.3s ease;
+
 
 }
 
@@ -109,7 +107,39 @@ body {
     color: #ba425af2;
     
 }
+.input-search{
+    margin: 1% 3% 0 0;
+}
+.input-search input{
+    padding: 7px 15px;
+    border-radius: 25px;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    margin-right: 10px;
+    width: 150px;
+    transition: 0.3s ease;
 
+}
+
+.input-search input:focus{
+    width: 200px;
+    background: #222222ea;
+    color: white;
+}
+.input-search .btn-search{
+    font-size: 16px;
+    padding: 6px 12px;
+    background: white;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+.input-search .btn-search:hover{
+    background: #ba425a83;
+    color: white;
+}
 .main {
     height: 100vh;
     display: grid;
