--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -38,7 +38,7 @@ body {
 .header {
     width: 100%;
     height: 60px;
-    background: #F5F5F5;
+     background: #efefeff1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -72,8 +72,7 @@ body {
 .menu {
     flex: 0.4;
     display: flex;
-    gap: 24px;
-    margin-right: 24px;
+    gap: 32px;
 }
 
 .menu a {
@@ -82,13 +81,47 @@ body {
     margin-top: 24px;
     font-size: large;
     font-weight: 600;
+    transition: 0.3s ease;
+
 
 }
 
 .menu a:hover {
     color: #ba425af2;
 }
+.input-search{
+    margin: 1% 3% 0 0;
+}
+.input-search input{
+    padding: 7px 15px;
+    border-radius: 25px;
+    border: none;
+    outline: none;
+    font-size: 17px;
+    margin-right: 10px;
+    width: 150px;
+    transition: 0.3s ease;
 
+}
+
+.input-search input:focus{
+    width: 200px;
+    background: #222222ea;
+    color: white;
+}
+.input-search .btn-search{
+    font-size: 15px;
+    padding: 8px 12px;
+    background: white;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+.input-search .btn-search:hover{
+    background: #ba425a83;
+    color: white;
+}
 .contact {
     height: 100vh;
     padding-top: 10%;
