--- a/Media/media_blog.css
+++ b/Media/media_blog.css
@@ -5,10 +5,18 @@
     .main-1{
         margin-top: 18%;
     }
+    .menu{
+        margin-right: 5%;
+        display: flex;
+        gap: 14px;
+    }
     .menu a{
         font-size: 14px;
     }
     .main-1 p{
+        display: none;
+    }
+     .input-search{
         display: none;
     }
     .main-2{
