--- a/Media/media_shop.css
+++ b/Media/media_shop.css
@@ -2,7 +2,11 @@
     .img p {
         display: none;
     }
-
+     .menu{
+        margin-right: 5%;
+        display: flex;
+        gap: 14px;
+    }
     .menu a {
         font-size: 14px;
     }
@@ -20,17 +24,22 @@
         width: 60%;
 
     }
-
+    .input-search{
+        display: none;
+    }
     .card {
-        display: flex;
-        justify-content: space-around;
+       display: grid;
+       grid-template-rows: repeat(2, 1fr);
+       grid-template-columns: repeat(2, 1fr);
     }
 
     .card a {
+        margin-left: 9%;
         height: 70%;
-        width: 30%;
+        width: 60%;
+        padding: 14px 18px 20px 18px;
     }
-
+    
     .card1 p,
     .card2 p,
     .card3 p,
@@ -71,11 +80,8 @@
     .info-1{
         margin-right: 18px;
     }
-    .main-2{
-        margin-top: 42px;
-    }
     .categories{
-        padding-bottom: 100px;
+        padding-top: 4%;
     }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
