--- a/Media/media_shop.css
+++ b/Media/media_shop.css
@@ -85,6 +85,9 @@
     }
 }
 @media (min-width: 601px) and (max-width: 1024px) {
+     .img p{
+        display: none;
+    }
     .card a {
         height: 70%;
         margin-top: 70px;
