--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -40,7 +40,7 @@ body {
 .header {
     width: 100%;
     height: 60px;
-  background: #efefeff1;
+    background: #efefeff1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -74,7 +74,7 @@ body {
 .menu {
     flex: 0.4;
     display: flex;
-    gap: 32px;
+    gap: 42px;
 }
 
 .menu a {
@@ -91,10 +91,12 @@ body {
 .menu a:hover {
     color: #ba425af2;
 }
-.input-search{
+
+.input-search {
     margin: 1% 3% 0 0;
 }
-.input-search input{
+
+.input-search input {
     padding: 7px 15px;
     border-radius: 25px;
     border: none;
@@ -106,12 +108,13 @@ body {
 
 }
 
-.input-search input:focus{
+.input-search input:focus {
     width: 200px;
     background: #222222ea;
     color: white;
 }
-.input-search .btn-search{
+
+.input-search .btn-search {
     font-size: 16px;
     padding: 6px 12px;
     background: white;
@@ -120,10 +123,12 @@ body {
     cursor: pointer;
     transition: 0.3s ease;
 }
-.input-search .btn-search:hover{
+
+.input-search .btn-search:hover {
     background: #ba425a83;
     color: white;
 }
+
 .form {
     height: 100vh;
 }
@@ -147,7 +152,7 @@ body {
     margin: 2% 0;
     height: 100vh;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 12px;
 }
 
@@ -200,12 +205,14 @@ body {
     gap: 12px;
     margin: 4% 3%;
 }
-.main-3-title{
+
+.main-3-title {
     text-align: center;
     display: flex;
     flex-direction: column;
     gap: 4px;
 }
+
 .main-3-content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -213,9 +220,11 @@ body {
     padding: 12px;
 
 }
-.main-3-content ul{
+
+.main-3-content ul {
     margin-left: 3%;
 }
+
 .Corporate-gift,
 .Birthday-gift {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -226,7 +235,8 @@ body {
     margin-bottom: 24p;
 
 }
-.main-4{
+
+.main-4 {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 40%;
     display: flex;
@@ -237,13 +247,16 @@ body {
     text-align: center;
 
 }
-.main-4 p{
+
+.main-4 p {
     color: #777;
 }
-.main-4 a button{
+
+.main-4 a button {
     margin-left: -2px;
 }
-.btn-contact{
+
+.btn-contact {
     width: 24%;
     padding: 12px 24px;
     border: none;
@@ -253,10 +266,12 @@ body {
     background: #ce927e;
     color: white;
 }
+
 .btn-contact:hover {
     background: #a67b6d;
     color: white;
 }
+
 .footer {
     margin: 32% auto;
     width: 100%;
