--- a/Media/media_blog.css
+++ b/Media/media_blog.css
@@ -1,70 +1,92 @@
-@media(min-width:320px) and (max-width:767px){
-    .img p{
+@media(min-width:320px) and (max-width:767px) {
+    .img p {
         display: none;
     }
-    .main-1{
+
+    .main-1 {
         margin-top: 18%;
     }
-    .menu{
+
+    .menu {
         margin-right: 5%;
         display: flex;
         gap: 14px;
     }
-    .menu a{
+
+    .menu a {
         font-size: 14px;
     }
-    .main-1 p{
+
+    .main-1 p {
         display: none;
     }
-     .input-search{
+
+    .input-search {
         display: none;
     }
-    .main-2{
+
+    .main-2 {
         display: flex;
         flex-direction: column;
     }
-    .main-3{
+
+    .main-3 {
         margin-top: 70%;
     }
-    .main-3 h1{
+
+    .main-3 h1 {
         display: none;
     }
-    .main-3 p{
+
+    .main-3 p {
         display: none;
     }
-    .main-4{
+
+    .main-4 {
         width: 75%;
         font-size: 12px;
         margin-left: 6%;
     }
-    .main-4 h3{
+
+    .main-4 h3 {
         font-size: 14px;
     }
-    .btn-contact{
+
+    .btn-contact {
         width: 60%;
         margin-left: 18%;
     }
-    .footer{
-         margin: 70em 0;
+
+    .footer {
+        margin: 70em 0;
     }
 }
-@media (min-width: 601px) and (max-width: 1024px){
-    .main-1{
-        margin-top:10%;
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    .main-1 {
+        margin-top: 10%;
     }
-    .main-2{
+
+    .main-2 {
         display: flex;
         flex-direction: column;
     }
-    .btn-contact{
+
+    .img p {
+        display: none;
+    }
+
+    .btn-contact {
         width: 40%;
         margin-left: 30%;
     }
-    .main-4{
+
+    .main-4 {
         width: 60%;
         margin-left: 14%;
     }
-    .footer{
+
+    .footer {
         margin: 60em 0;
     }
 
