--- a/Media/media_contact.css
+++ b/Media/media_contact.css
@@ -41,6 +41,13 @@
 
 }
 @media (min-width: 601px) and (max-width: 1024px){
+    .contact{
+        padding-top: 16%;
+    }
+    .img p{
+        display: none;
+    }
+
     .form{
         display: flex;
         flex-direction: column;
