--- a/Media/media_index.css
+++ b/Media/media_index.css
@@ -50,6 +50,9 @@
 }
 
 @media (min-width: 601px) and (max-width: 1024px){
+     .img p{
+        display: none;
+    }
     .main-1 {
         height: 70vh;
     }
