--- a/Media/media_contact.css
+++ b/Media/media_contact.css
@@ -52,6 +52,10 @@
         display: flex;
         flex-direction: column;
     }
+    .location h3{
+        width: 50%;
+        margin-left: 27%;
+    }
     .footer{
         margin-top: 30em;
     }
