--- a/CSS/cate.css
+++ b/CSS/cate.css
@@ -97,7 +97,7 @@ body {
     color: #222222;
     margin-top: 24px;
     font-size: large;
-    font-weight: 600;
+    /* font-weight: 600; */
     transition: 0.3s ease;
 
 
