--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -80,7 +80,7 @@ body {
     color: #222222;
     margin-top: 24px;
     font-size: large;
-    font-weight: 600;
+    /* font-weight: 600; */
     transition: 0.3s ease;
 
 
