--- a/CSS/index.css
+++ b/CSS/index.css
@@ -80,10 +80,13 @@ body {
     color: #222222;
     margin-top: 24px;
     font-size: large;
-    font-weight: 600;
+    /* font-weight: 600; */
     transition: 0.3s ease;
 
 
+}
+.menu a:hover {
+    color: #ba425af2;
 }
 
 .input-search {
