--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -19,6 +19,7 @@ body {
 
 }
 
+/* ----------Navbar----------- */
 .mix {
     width: 100%;
     position: fixed;
@@ -133,6 +134,7 @@ body {
     height: 100vh;
 }
 
+/* ----------Content----------- */
 .main {
     height: 100vh;
     padding-top: 10%;
@@ -141,6 +143,7 @@ body {
     gap: 24px;
 }
 
+/* ----------Services----------- */
 .main-1 {
     height: 100vh;
     display: flex;
@@ -199,6 +202,7 @@ body {
     border: none;
 }
 
+/* ----------Recommend Helpful gift----------- */
 .main-3 {
     display: flex;
     flex-direction: column;
@@ -236,6 +240,7 @@ body {
 
 }
 
+/* ----------Contact to get help----------- */
 .main-4 {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 40%;
@@ -272,6 +277,7 @@ body {
     color: white;
 }
 
+/* ----------Footer----------- */
 .footer {
     margin: 32% auto;
     width: 100%;
